# turf

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
data/: wc2022_goals.csv
docs/: commands.md
reports/: lbp_winner_fewer_breaks_wc22.txt
scripts/: draw_zones.py  lbp_winner_analysis.py  run_leak_pipeline.sh  slurm_task.sh  submit_leak_pipeline.sh  viz_risk_model.py
src/leak/: lines.py  pass_label.py  risk.py
src/obpv/: __init__.py  _base.py  _composer.py  _grid.py  _pitch_control.py  _pitch_weight.py  _state.py  _surface.py  _transition.py  analyzer.py  bridge.py  pass_obpv.py
src/turf/: analyze_features.py  analyze_leak.py  cli.py  dataset.py  event.py  event_extractor.py  event_visualizer.py  features.py  leak_lines_visualizer.py  match.py  match_loader.py  paging.py  pass_label.py  possession.py  prepare.py  pressure.py  ranking.py  xt.py  zone.py
src/turf/data/: fifa_ranking_wc22.csv
tests/: test_analyze_around_stats.py  test_analyze_leak_cli.py  test_dataset.py  test_event_cli.py  test_event_extractor.py  test_event_visualizer.py  test_features.py  test_leak_lines.py  test_leak_lines_visualizer.py  test_match_loader.py  test_paging.py  test_pass_label.py  test_possession.py  test_possession_cli.py  test_prepare.py  test_pressure.py  test_ranking.py  test_ranking_cli.py  test_risk.py  test_tracking.py  test_tracking_utils.py  test_xt.py  test_zone.py
tests/io/: test_event_extractor.py  test_match_loader.py  test_prepare.py  test_pressure.py  test_tracking.py  test_tracking_utils.py
tests/test_obpv/: test_analyzer.py  test_bridge.py  test_grid.py  test_pass_obpv.py  test_pitch_control.py  test_state.py
(+4 files in other folders)
