[project]
name = "turf"
version = "0.1.0"
description = "Soccer/football research toolkit"
readme = "README.md"
authors = [
    { name = "shygnome", email = "shygnome3@gmail.com" }
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "mplsoccer>=1.6.1",
    "openstarlab-preprocessing>=0.1.54",
    "pillow>=12.2.0",
    "scipy>=1.10.1",
    "tomli>=2.0.0; python_version < '3.11'",
    "tqdm>=4.67.3",
    "typer>=0.25.1",
]

[project.scripts]
turf = "turf.cli:app"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
